--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-
 spring.jpa.properties.hibernate.format_sql=true
+spring.servlet.multipart.location=C:/uploads
+spring.servlet.multipart.enabled=true
+spring.webflux.cors.allowed-origins=http://localhost:4200
+spring.webflux.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
